Adding Pulkit as a judge, chatbot, and stats

--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
                    <div class="profile-details">
                        <h3>Founder | Board Chair</h3>
                        <h4>Victoria Glossip</h4>
-                       <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                       <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                    </div>
                </div>
                <div class="profile bod-item-2">
@@ -77,7 +77,7 @@
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
                         <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                     </div>
                 </div>
                 <div class="profile coaches-item-2">
@@ -93,6 +93,13 @@
                         <h4>Hamza Rafeeq</h4>
                         <p>Hamza Rafeeq is a senior at Independence High School and will be studying Computer Science at the University of Texas at Dallas. He’s an Eagle Scout with a strong interest in tech, teaching, and giving back. He’s worked as a math instructor at Mathnasium and currently teaches Islamic studies at his local mosque. On the side, he builds web games for fun and posts them online. When he’s not coding or teaching, you’ll probably find him playing volleyball or caught up in a good book.</p>
                     </div>
+                </div>
+                <div class="profile coaches-item-4">
+                    <img src="images/taylor_eaton_headshot.jpeg" alt="Taylor Eaton">
+                   <div class="profile-details">
+                       <h4>Taylor Eaton</h4>
+                       <p>Taylor first taught herself arduino code in high school for a science fair project. She holds certifications in artificial intelligence, and her coding languages include Python, Java, and Excel. Her goal is to increase opportunities for young programmers to achieve their own coding dreams and share her interest in coding with them.</p>
+                   </div>
                 </div>
             </div>
             <!--div class="coaches">
@@ -135,15 +142,22 @@
                        <p>Taylor first taught herself arduino code in high school for a science fair project. She holds certifications in artificial intelligence, and her coding languages include Python, Java, and Excel. Her goal is to increase opportunities for young programmers to achieve their own coding dreams and share her interest in coding with them.</p>
                    </div>
                 </div>
-                <!--<div class="profile judges-item-3">
+                <div class="profile judges-item-3">
+                    <img src="images/pulkit_goel.jpg" alt="Pulkit Goel">
+                    <div class="profile-details">
+                        <h4>Pulkit Goel</h4>
+                        <p>Pulkit Goel is a Staff Engineer at Activision Blizzard Media (Microsoft), where he leads the design and development of scalable ad tech solutions that power advertising across global gaming platforms. With over 17 years of experience in the software industry, Pulkit has a strong track record of building robust systems at scale. During his 10+ years at Yahoo, he contributed to several core platforms—including Yahoo Mail backend services, the Yahoo Ads system, and the GeoLocation Platform. Pulkit is passionate about technology, mentorship, and creating impactful products that blend innovation with real-world user needs..</p>
+                    </div>
+                </div>
+                <div class="profile judges-item-4">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
                         <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                     </div>
                 </div>
             </div>
-            <div class="coaches">
+            <!--<div class="coaches">
                 <div class="profile judges-item-1">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
