Created mobile and main index pages

--- a/courses.html
+++ b/courses.html
@@ -32,25 +32,25 @@
             <h2>Web Development Hackathon Prep</h2>
             <ul>
                 <li>Web Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:30 AM Eastern Time</div>
                 </li>
                 <li>Web Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
+                    <div class="nested-list">Time: 11:30 AM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
                 <li>Web Dev Prep Advanced
-                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
+                    <div class="nested-list">Time: 1:00 PM Eastern Time - 2:30 PM Eastern Time</div>
                 </li>
             </ul>
             <h2>App Development Hackathon Prep</h2>
             <ul>
                 <li>App Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:30 AM Eastern Time</div>
                 </li>
                 <li>App Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
+                    <div class="nested-list">Time: 11:30 AM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
                 <li>App Dev Prep Advanced
-                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
+                    <div class="nested-list">Time: 1:00 PM Eastern Time - 2:30 PM Eastern Time</div>
                 </li>
             </ul>
             <!--<button class="button" onclick="register()">Register</button>-->
@@ -63,25 +63,25 @@
             <h2>Web Development Hackathon Prep</h2>
             <ul>
                 <li>Web Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM EST - 11:00 AM EST</div>
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
                 </li>
                 <li>Web Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:00 AM EST - 12:00 PM EST</div>
+                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
                 </li>
                 <li>Web Dev Prep Advanced
-                    <div class="nested-list">Time: 12:00 PM EST - 1:00 PM EST</div>
+                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
             <h2>App Development Hackathon Prep</h2>
             <ul>
                 <li>App Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM EST - 11:00 AM EST</div>
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
                 </li>
                 <li>App Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:00 AM EST - 12:00 PM EST</div>
+                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
                 </li>
                 <li>App Dev Prep Advanced
-                    <div class="nested-list">Time: 12:00 PM EST - 1:00 PM EST</div>
+                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
             <button class="button" onclick="register()">Register</button>
