--- a/hackathons.html
+++ b/hackathons.html
@@ -31,13 +31,13 @@
             <h2>Web Development Hackathons</h2>
             <ul>
                 <li>Web Dev Hackathon
-                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
                 </li>
             </ul>
             <h2>App Development Hackathons</h2>
             <ul>
                 <li>App Dev Hackathon
-                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
                 </li>
             </ul>
             <!--<button class="button" onclick="register()">Register for Hackathons</button>-->
@@ -49,13 +49,13 @@
             <h2>Web Development Hackathons</h2>
             <ul>
                 <li>Web Dev Hackathon
-                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
                 </li>
             </ul>
             <h2>App Development Hackathons</h2>
             <ul>
                 <li>App Dev Hackathon
-                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
                 </li>
             </ul>
             <button class="button" onclick="register()">Register</button>
