--- a/aboutus.html
+++ b/aboutus.html
@@ -98,11 +98,11 @@
                     <img src="images/muntasir_nahiyan_headshot.png" alt="Muntasir Nahiyan">
                    <div class="profile-details">
                        <h4>Muntasir Nahiyan</h4>
-                       <p>Rising Senior at Skyline Highschool
-                        Loves math and sciences of all kind
-                        Won awards at 3 hackathons
-                        Has taught at KCLS for almost a full school year now
-                        Excited to work with Bit by Bit Coding</p>
+                       <p>Rising Senior at Skyline Highschool.
+                        Loves math and sciences of all kind.
+                        Won awards at 3 hackathons.
+                        Has taught at KCLS for almost a full school year now.
+                        Excited to work with Bit by Bit Coding.</p>
                    </div>
                 </div>
             </div>
