--- a/aboutus.html
+++ b/aboutus.html
@@ -106,29 +106,37 @@
                    </div>
                 </div>
             </div>
-            <!--div class="coaches">
+            <div class="coaches">
+                <!--ROW 2-->
                 <div class="profile coaches-item-1">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/averie_truong_headshot.png" alt="Averie Truong">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Averie Truong</h4>
+                        <p>Averie is a high school student passionate about coding, cybersecurity, and emerging technologies. Through programs like Bit by Bit Coding, she looks to expand her skills in new areas of tech, build real-world projects, and grow as a developer and problem-solver. She is especially excited to support others, contribute to meaningful projects, and be part of a diverse tech community.</p>
                     </div>
                 </div>
                 <div class="profile coaches-item-2">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/inchara_padmanabh_headshot.png" alt="Inchara Padmanabh">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Inchara Padmanabh</h4>
+                        <p>I have previously learned HTML, CSS, and JavaScript briefly and have knowledge in different programming languages such as python and java. I'm passionate it designing and find it enjoyable as a way to creatively express myself and/or ideas. Additionally, I did around a year of tutoring elementary school kids.</p>
                     </div>
                 </div>
                 <div class="profile coaches-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/annaliese_scott_headshot.png" alt="Annaliese Scott">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Annaliese Scott</h4>
+                        <p>Hi everyone! My name is Annaliese Scott and I live in Seattle Washington. I’m a junior in high school and have been coding since 7th grade. I’m proficient in multiple different coding languages such as Javascript, Java, and Python. My goal is to instill the love I have for coding in young kids. I also aim to allow kids to have a fun outlet to express their creativity and further their technological skills.</p>
                     </div>
                 </div>
-            </div-->
+                <div class="profile coaches-item-4">
+                    <img src="images/joan_ndambiri_headshot.jpeg" alt="Joan Ndambiri">
+                    <div class="profile-details">
+                        <h4>Joan Ndambiri</h4>
+                        <p>I’m Joan, a Software Engineer with experience in software development and cloud infrastructure. I specialize in building reliable, scalable systems and bridging the gap between traditional applications and modern cloud-native solutions. Beyond the world of enterprise technology, I have dedicated my work to nurturing the next generation of tech talent. My mission is clear: to bridge the gender gap in technology by creating engaging, hands-on opportunities that ignite curiosity and build confidence in learners.</p>
+                    </div>
+                </div>
+            </div>
             <h2>Judges</h2>
             <div class="judges">
 
