--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="grid-container grid-container-courses">
-        <!-- Current Classes -->
+        <!-- Spring 2025
         <div class="container">
             <h1>Current Classes</h1>
             <p>All prep courses run for 10 weeks, meeting via Zoom on 2/15/2025, 2/22/2025, 3/1/2025, 3/8/2025, 3/15/2025, 3/22/2025, 3/29/2025, 4/5/2025, 4/12/2025, & 4/19/2025</p>
@@ -53,13 +53,44 @@
                     <div class="nested-list">Time: 1:00 PM Eastern Time - 2:30 PM Eastern Time</div>
                 </li>
             </ul>
-            <!--<button class="button" onclick="register()">Register</button>-->
+            <button class="button" onclick="register()">Register</button>
+        </div>-->
+
+        <!-- Summer 2025 -->
+        <div class="container">
+            <h1>Summer 2025 Courses (Current)</h1>
+            <p>All prep courses run for 4 weeks, meeting via Discord on 7/5/2025, 7/12/2025, 7/19/2025, & 7/26/2025</p>
+            <h2>Web Development Hackathon Prep</h2>
+            <ul>
+                <li>Web Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+                </li>
+                <li>Web Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+                </li>
+                <li>Web Dev Prep Advanced
+                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+                </li>
+            </ul>
+            <h2>App Development Hackathon Prep</h2>
+            <ul>
+                <li>App Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+                </li>
+                <li>App Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+                </li>
+                <li>App Dev Prep Advanced
+                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+                </li>
+            </ul>
+            <button class="button" onclick="register()">Register</button>
         </div>
 
-        <!-- Upcoming Classes -->
+        <!-- Fall 2025 -->
         <div class="container">
-            <h1>Upcoming Classes</h1>
-            <p>All prep courses run for 4 weeks, meeting via Zoom on 7/5/2025, 7/12/2025, 7/19/2025, & 7/26/2025</p>
+            <h1>Fall 2025 Courses</h1>
+            <p>All prep courses and their included hackthons run for 10 weeks, meeting via Discord on 9/20, 9/27, 10/4, 10/11, 10/18 (Mid-Session Hackathon), 10/25, 11/1, 11/8, 11/15, 11/22 (End of Session Hackathon)</p>
             <h2>Web Development Hackathon Prep</h2>
             <ul>
                 <li>Web Dev Prep Beginner
