--- a/hackathons.html
+++ b/hackathons.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="grid-container grid-container-hackathon">
-        <!-- Current Hackathons -->
+        <!-- Current Hackathons 
         <div class="container">
             <h1>Current Hackathons</h1>
             <h2>Web Development Hackathons</h2>
@@ -40,12 +40,12 @@
                     <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <!--<button class="button" onclick="register()">Register for Hackathons</button>-->
-        </div>
+            <button class="button" onclick="register()">Register for Hackathons</button>
+        </div>-->
 
         <!-- Upcoming Hackathons -->
         <div class="container">
-            <h1>Upcoming Hackathons</h1>
+            <h1>Summer 2025 Hackathons</h1>
             <h2>Web Development Hackathons</h2>
             <ul>
                 <li>Web Dev Hackathon
