--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
         </div>
         <div class="container">
             <h1>Welcome to Bit by Bit</h1>
-            <p>Igniting interest in coding worldwide.</p>
+            <p>Igniting interest in coding worldwide, rooted in North Carolina.</p>
             <a href="courses.html" class="button">Courses</a>
             <a href="hackathons.html" class="button">Hackathons</a>
             <a href="workwithus.html" class="button">Work With Us</a>
@@ -35,20 +35,20 @@
         <div class="stats-section">
             <div class="stats-container">
                 <div class="stat-box">
-                    <div class="stat-number">22</div>
+                    <div class="stat-number">26</div>
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">378</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
-                <!--<div class="stat-box">
-                    <div class="stat-number">10,000+</div>
-                    <div class="stat-label">Students</div>
-                </div>-->
                 <div class="stat-box">
-                    <div class="stat-number">28</div>
+                    <div class="stat-number">40</div>
                     <div class="stat-label">Volunteers</div>
+                </div>
+                <div class="stat-box">
+                    <div class="stat-number">29%</div>
+                    <div class="stat-label">North Carolinians</div>
                 </div>
             </div>
         </div>
