--- a/courses.html
+++ b/courses.html
@@ -89,7 +89,7 @@
 
         <!-- Fall 2025 -->
         <div class="container">
-            <h1>Fall 2025 Courses</h1>
+            <h1>Fall 2025 Courses (Upcoming)</h1>
             <p>All prep courses and their included hackthons run for 10 weeks, meeting via Discord on 9/20, 9/27, 10/4, 10/11, 10/18 (Mid-Session Hackathon), 10/25, 11/1, 11/8, 11/15, 11/22 (End of Session Hackathon)</p>
             <h2>Web Development Hackathon Prep</h2>
             <ul>
@@ -115,14 +115,14 @@
                     <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button" onclick="register()">Register</button>
+            <button class="button" onclick="register()">Registration opens 8/9</button>
         </div>
     </div>
-    <script>
+    <!--<script>
         function register() {
             window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
         }
-    </script>
+    </script>-->
     <!--<footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
