--- a/hackathons.html
+++ b/hackathons.html
@@ -43,7 +43,7 @@
             <button class="button" onclick="register()">Register for Hackathons</button>
         </div>-->
 
-        <!-- Upcoming Hackathons -->
+        <!-- Current Hackathons -->
         <div class="container">
             <h1>Summer 2025 Hackathons</h1>
             <h2>Web Development Hackathons</h2>
@@ -66,6 +66,35 @@
             window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfJNMaleVGdWsgeikMl2jUZK4qEa0ghphVqsAoSCTYBn4H6VA/viewform?usp=dialog";
         }
     </script>
+    <!-- Upcoming Hackathons -->
+    <div class="container">
+        <h1>Fall 2025 Hackathons</h1>
+        <h2>Web Development Hackathons</h2>
+        <ul>
+            <li>Web Dev Mid-Session Hackathon
+                <div class="nested-list">Date: October 18th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
+            </li>
+            <li>Web Dev End of Session Hackathon
+                <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
+            </li>
+        </ul>
+        <h2>App Development Hackathons</h2>
+        <ul>
+            <li>App Dev Mid-Session Hackathon
+                <div class="nested-list">Date: October 18th, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
+            </li>
+            <li>Web Dev End of Session Hackathon
+                <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
+            </li>
+        </ul>
+        <button class="button" onclick="register()">Register</button>
+    </div>
+</div>
+<script>
+    function register() {
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfJNMaleVGdWsgeikMl2jUZK4qEa0ghphVqsAoSCTYBn4H6VA/viewform?usp=dialog";
+    }
+</script>
     <!--<footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
