--- a/hackathons.html
+++ b/hackathons.html
@@ -87,14 +87,14 @@
                 <div class="nested-list">Date: November 22nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time, Judging: 3:00 PM Eastern Time - 4:00 PM Eastern Time</div>
             </li>
         </ul>
-        <button class="button" onclick="register()">Register</button>
+        <button class="button" onclick="register()">Registration opens 8/9</button>
     </div>
 </div>
-<script>
+<!--<script>
     function register() {
         window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfJNMaleVGdWsgeikMl2jUZK4qEa0ghphVqsAoSCTYBn4H6VA/viewform?usp=dialog";
     }
-</script>
+</script>-->
     <!--<footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
