--- a/courses.html
+++ b/courses.html
@@ -86,6 +86,11 @@
             </ul>
             <button class="button" onclick="register()">Register</button>
         </div>
+        <script>
+        function register() {
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
+        }
+    </script>
 
         <!-- Fall 2025 -->
         <div class="container">
