--- a/courses.html
+++ b/courses.html
@@ -120,7 +120,7 @@
                     <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button" onclick="register()">Registration opens 8/9</button>
+            <button class="button">Registration opens 8/9</button>
         </div>
     </div>
     <!--<script>
