--- a/courses.html
+++ b/courses.html
@@ -120,10 +120,11 @@
                     <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button">Registration opens 8/9</button>
+            <p>Registration opens 8/9</p>
+            <!--<button class="button">Registration opens 8/9</button>
         </div>
     </div>
-    <!--<script>
+    <script>
         function register() {
             window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
         }
