--- a/faq.html
+++ b/faq.html
@@ -66,7 +66,7 @@
         <div class="question">
             <h2>Will I earn a certificate?</h2>
             <p>Yes! You will receive a certificate upon successfully completing each Hackathon Prep Course as a recognition of your achievement.</p>
-            <p>Additionally, after participating in a Hackathon, you will earn a certificate and have the opportunity to win an award!</p>
+            <p>Additionally, after participating in a Hackathon, you will earn a certificate and have the opportunity to win an award title (example: Best Design)!</p>
         </div>
         <div class="question">
             <h2>Can I attend a hackathon without attending a hackathon prep course?</h2>
