--- a/courses.html
+++ b/courses.html
@@ -84,51 +84,114 @@
                     <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <button class="button" onclick="register()">Register</button>
+            <p>Registration Closed</p>
         </div>
-        <script>
-        function register() {
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
-        }
-    </script>
 
-        <!-- Fall 2025 -->
-        <div class="container">
-            <h1>Fall 2025 Courses (Upcoming)</h1>
-            <p>All prep courses and their included hackthons run for 10 weeks, meeting via Discord on 9/20, 9/27, 10/4, 10/11, 10/18 (Mid-Session Hackathon), 10/25, 11/1, 11/8, 11/15, 11/22 (End of Session Hackathon)</p>
-            <h2>Web Development Hackathon Prep</h2>
-            <ul>
-                <li>Web Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
-                </li>
-                <li>Web Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
-                </li>
-                <li>Web Dev Prep Advanced
-                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
-                </li>
-            </ul>
-            <h2>App Development Hackathon Prep</h2>
-            <ul>
-                <li>App Dev Prep Beginner
-                    <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
-                </li>
-                <li>App Dev Prep Intermediate
-                    <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
-                </li>
-                <li>App Dev Prep Advanced
-                    <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
-                </li>
-            </ul>
-            <p>Registration opens 8/9</p>
-            <!--<button class="button">Registration opens 8/9</button>
-        </div>
-    </div>
-    <script>
-        function register() {
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
-        }
-    </script>-->
+
+<!-- Fall 2025 A -->
+<div class="container">
+    <h1>Fall 2025 Session A Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on September 20th, September 27th, October 4th, and October 11th. These courses include an end-of-session hackathon on October 18th from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <button class="button" onclick="registera()">Register</button>
+</div>
+<script>
+function registera() {
+    window.location.href = "https://forms.gle/uMHVdzLrs3FuQT889";
+}
+</script>
+
+<!-- Fall 2025 B -->
+<div class="container">
+    <h1>Fall 2025 Session B Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on October 25th, November 1st, November 8th, and November 15th. These courses include an end-of-session hackathon on November 22nd from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <button class="button" onclick="registerb()">Register</button>
+</div>
+<script>
+function registerb() {
+    window.location.href = "https://forms.gle/4rQLTwf6RpTJLaLh6";
+}
+</script>
+
+<!-- Spring 2026 -->
+<div class="container">
+    <h1>Spring 2026 Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on January 3rd, January 10th, January 17th, January 24th, January 31st, February 7th, February 14th, February 21st, and February 28th. These courses include an end-of-session hackathon on March 7th from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <!--<button class="button" onclick="register()">Register</button>-->
+    <p>Registration Opens December 1st, 2025</p>
+</div>
+
     <!--<footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
