--- a/courses.html
+++ b/courses.html
@@ -84,8 +84,13 @@
                     <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <p>Registration Closed</p>
+            <button class="button" onclick="registers()">Register</button>
         </div>
+        <script>
+        function registers() {
+            window.location.href = "https://forms.gle/pUsraUxwmXv48jzv5";
+        }
+        </script>
 
 
 <!-- Fall 2025 A -->
