--- a/courses.html
+++ b/courses.html
@@ -125,7 +125,7 @@
 </div>
 <script>
 function registera() {
-    window.location.href = "https://forms.gle/uMHVdzLrs3FuQT889";
+    window.location.href = "https://forms.gle/sLQqYiUad6p9te9z7";
 }
 </script>
 
