--- a/workwithus.html
+++ b/workwithus.html
@@ -49,15 +49,23 @@
     <h2>Available Roles:</h2>
     <ul>
         <li>Coach</li>
+        <li>Bilingual Coach (The second google form)</li>
         <li>Judge</li>
         <!--<li>Director of Outreach</li>
         <li>Director of Social Media</li>-->
     </ul>
 
-    <button class="button" onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up</button>
+    <button class="button" onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up to be a Coach and/or Judge</button>
     <script>
         function redirectToGoogleForm() {
             window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing";
+        }
+    </script>
+
+    <button class="button" onclick='window.location.href="https://forms.gle/kdUFYhzHrj6F5t2G9"'>Sign Up to be a Bilingual Coach</button>
+    <script>
+        function redirectToGoogleFormBC() {
+            window.location.href = "https://forms.gle/kdUFYhzHrj6F5t2G9";
         }
     </script>
 
