--- a/aboutus.html
+++ b/aboutus.html
@@ -137,6 +137,37 @@
                     </div>
                 </div>
             </div>
+            <div class="coaches">
+                <!--ROW 3-->
+                <div class="profile coaches-item-1">
+                    <img src="images/alexis_gumapas_headshot.jpg" alt="Alexis Gumapas">
+                    <div class="profile-details">
+                        <h4>Alexis Gumapas</h4>
+                        <p>Hi, my name is Alexis and I am a junior in Eleanor Roosevelt High. I have experience and certifications in HTML, CSS, and Javascript. Currently, I am expanding my skills in app development with Swift. I can’t wait to help teach at Bit by Bit Coding!</p>
+                    </div>
+                </div>
+                <div class="profile coaches-item-2">
+                    <img src="images/onyechi_obioma_headshot.jpg" alt="Onyechi Obioma">
+                    <div class="profile-details">
+                        <h4>Onyechi Obioma</h4>
+                        <p>Hi everyone! My name is Onyechi Obioma, and I’m currently a freshman at Denis Morris High School. Since elementary school I’ve loved coding, either on Scratch or HTML. I’ve been really into coding with Java recently and I’m excited to work with Bit by Bit Coding!</p>
+                    </div>
+                </div>
+                <div class="profile coaches-item-3">
+                    <img src="images/tvisha_doshi_headshot.png" alt="Tvisha Doshi">
+                    <div class="profile-details">
+                        <h4>Tvisha Doshi</h4>
+                        <p>Hello! I’m Tvisha Doshi, a Computer Engineering major at the University of Texas at Dallas. I discovered my passion for coding and tutoring back in high school, and I’ve been expanding my knowledge in languages like HTML, C++, and Javascript ever since. I love sharing proud moments with students as they code new projects. In my free time, I usually dance, travel, or discover new restaurants.</p>
+                    </div>
+                </div>
+                <div class="profile coaches-item-4">
+                    <img src="images/nikhitha_reddi_headshot.JPG" alt="Nikhitha Reddi">
+                    <div class="profile-details">
+                        <h4>Nikhitha Reddi</h4>
+                        <p>Nikhitha Reddi is an enthusiastic educator and aspiring developer with a strong interest in technology and community impact. With experience in front-end and back-end development, she is passionate about making tech education accessible and engaging for all students, especially those new to programming.</p>
+                    </div>
+                </div>
+            </div>
             <h2>Judges</h2>
             <div class="judges">
 
