Update to Version 2.0

--- a/main.html
+++ b/main.html
@@ -21,12 +21,22 @@
         <div>
             <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
         </div>
-        <div class="container">
+        <!--<div class="container">
             <h1>Welcome to Bit by Bit</h1>
             <p>Igniting interest in coding worldwide, rooted in North Carolina.</p>
             <a href="courses.html" class="button">Courses</a>
             <a href="hackathons.html" class="button">Hackathons</a>
             <a href="workwithus.html" class="button">Work With Us</a>
+            <a href="aboutus.html" class="button">About Us</a>
+            <a href="faq.html" class="button">FAQ</a>
+        </div>-->
+
+        <div class="container">
+            <h1>Welcome to Bit by Bit</h1>
+            <p>Igniting interest in coding worldwide, rooted in North Carolina.</p>
+            <a href="student-hub.html" class="button">Student Hub</a>
+            <a href="volunteer-hub.html" class="button">Volunteer Hub</a>
+            <a href="ambassador-hub.html" class="button">Ambassador Hub</a>
             <a href="aboutus.html" class="button">About Us</a>
             <a href="faq.html" class="button">FAQ</a>
         </div>
@@ -35,16 +45,16 @@
         <div class="stats-section">
             <div class="stats-container">
                 <div class="stat-box">
-                    <div class="stat-number">26</div>
+                    <div class="stat-number">29</div>
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">391</div>
+                    <div class="stat-number">717</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">42</div>
-                    <div class="stat-label">Volunteers</div>
+                    <div class="stat-number">317</div>
+                    <div class="stat-label">Volunteer Hours</div>
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">29%</div>
