--- a/student-hub.html
+++ b/student-hub.html
@@ -41,29 +41,19 @@
 
         <p>Our program is open to students <strong>ages 7 and up</strong>, and offers six dynamic courses designed to grow with you. Whether you're just starting out or ready to build your first app, there's a class for you.</p>
 
-        <div class="grid-container">
-            <div class="courses">
+        <div class="student-hub">
+            <div class="student-hub-item">
             <p>If you're looking to learn HTML and CSS, take one of our Web Development courses.</p>
             <p>If you're looking to learn JavaScript, take one of our App Development courses.</p>
             <button class="button" onclick='window.location.href="courses.html"'>Sign Up for a Course!</button>
             </div>
-            <div class="hackathons">
+            <div class="student-hub-item">
             <p>If you're proficient in HTML and CSS, sign up for one of our Web Development hackathons.</p>
             <p>If you're proficient in JavaScript, sign up for one of our App Development hackathons.</p>
             <button class="button" onclick='window.location.href="hackathons.html"'>Sign Up for a Hackathon!</button>
             </div>
         </div>
         <style>
-            .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            }
-            .courses, .hackathons {
-            padding: 20px;
-            border: 5px solid #4A7D96;
-            border-radius: 15px;
-            }
         </style>
 
 
