--- a/student-hub.html
+++ b/student-hub.html
@@ -39,7 +39,7 @@
 
         <p>At Bit by Bit, you're not just learning to code: you're discovering how to think critically, solve real-world problems, and create technology that makes a difference.</p>
 
-        <p>Our program is open to students <strong>ages 7 and up</strong>, and offers six dynamic courses designed to grow with you. Whether you're just starting out or ready to build your first app, there's a class for you.</p>
+        <p>Our program is open to students of all ages, and offers six dynamic courses designed to grow with you. Whether you're just starting out or ready to build your first app, there's a class for you.</p>
 
         <div class="student-hub">
             <div class="student-hub-item">
